unpackaged/main/default/objects/Escarre__c/Escarre__c.object-meta.xml
<CustomObject>
    <label>Escarre</label>
    <nameField>
        <displayFormat>ES-{00000000}</displayFormat>
        <label>Nom de Escarre</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Escarres</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>