unpackaged/main/default/objects/Escarre__c/fields/Dossier_d_intervention__c.field-meta.xml
<CustomField>
    <fullName>Dossier_d_intervention__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dossier d&apos;intervention</label>
    <referenceTo>Dossier_de_prise_en_charge__c</referenceTo>
    <relationshipLabel>Escarres</relationshipLabel>
    <relationshipName>Escarres</relationshipName>
    <type>Lookup</type>
</CustomField>