unpackaged/main/default/objects/Escarre__c/fields/Risque__c.field-meta.xml
<CustomField>
    <fullName>Risque__c</fullName>
    <formula>IF( Score__c &lt; 13, &apos;Risque élevé&apos; , IF(Score__c &lt; 15, &apos;Risque modéré&apos;, IF(  Score__c &lt; 19, &apos;Risque faible&apos;, &apos;Risque extrêmement faible&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risque</label>
    <type>Text</type>
</CustomField>